--- a/Basket-Donation-Payments/Basket-Donation-Payments/Storyboards/Base.lproj/Main.storyboard
+++ b/Basket-Donation-Payments/Basket-Donation-Payments/Storyboards/Base.lproj/Main.storyboard
@@ -874,28 +874,80 @@
                                     <action selector="nextButtonTapped:" destination="LWX-5I-5sV" eventType="touchUpInside" id="GVE-U5-Seq"/>
                                 </connections>
                             </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="71n-vH-RZY">
+                                <rect key="frame" x="0.0" y="169" width="414" height="490"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" id="qiD-2o-Ki6">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </searchBar>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="NonprofitListCell" id="oMw-yN-wZq" customClass="NonprofitListCell">
+                                        <rect key="frame" x="0.0" y="72" width="414" height="109"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="oMw-yN-wZq" id="6v7-PU-mfm">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="109"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9BZ-Qs-zwb">
+                                                    <rect key="frame" x="20" y="21" width="60" height="60"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="9BZ-Qs-zwb" secondAttribute="height" multiplier="1:1" id="CBU-HS-SOG"/>
+                                                        <constraint firstAttribute="height" constant="60" id="HFo-kz-Pgd"/>
+                                                    </constraints>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                            <integer key="value" value="30"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="she256" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="maV-Rz-V1F">
+                                                    <rect key="frame" x="90" y="21" width="304" height="31.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C4o-gN-EFv">
+                                                    <rect key="frame" x="90" y="57.5" width="304" height="41"/>
+                                                    <string key="text">she256 aims to increase diversity &amp; break down barriers to entry in the blockchain space by broadening the pipeline through increasing accessibility to industry professionals &amp; education specifically to those who are underrepresented.
+
+</string>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="9BZ-Qs-zwb" secondAttribute="bottom" constant="10" id="0hQ-zw-X4v"/>
+                                                <constraint firstItem="9BZ-Qs-zwb" firstAttribute="leading" secondItem="6v7-PU-mfm" secondAttribute="leadingMargin" id="0ir-cb-Jdc"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="C4o-gN-EFv" secondAttribute="bottom" constant="10" id="3A2-d2-QwI"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="maV-Rz-V1F" secondAttribute="trailing" id="4Yc-8z-I8F"/>
+                                                <constraint firstItem="C4o-gN-EFv" firstAttribute="leading" secondItem="maV-Rz-V1F" secondAttribute="leading" id="9sK-El-ued"/>
+                                                <constraint firstItem="C4o-gN-EFv" firstAttribute="leading" secondItem="9BZ-Qs-zwb" secondAttribute="trailing" constant="10" id="DQF-g7-fYG"/>
+                                                <constraint firstItem="9BZ-Qs-zwb" firstAttribute="top" secondItem="6v7-PU-mfm" secondAttribute="topMargin" constant="10" id="Don-7Q-c5K"/>
+                                                <constraint firstItem="maV-Rz-V1F" firstAttribute="top" secondItem="9BZ-Qs-zwb" secondAttribute="top" id="Ecd-Rn-WRg"/>
+                                                <constraint firstItem="C4o-gN-EFv" firstAttribute="top" secondItem="maV-Rz-V1F" secondAttribute="bottom" constant="5" id="Hch-DR-XfL"/>
+                                                <constraint firstItem="C4o-gN-EFv" firstAttribute="trailing" secondItem="6v7-PU-mfm" secondAttribute="trailingMargin" id="n9a-fB-fb6"/>
+                                                <constraint firstItem="maV-Rz-V1F" firstAttribute="leading" secondItem="9BZ-Qs-zwb" secondAttribute="trailing" constant="10" id="yUs-5d-Bwc"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="nonprofitDescriptionLabel" destination="C4o-gN-EFv" id="fmX-cq-md1"/>
+                                            <outlet property="nonprofitNameLabel" destination="maV-Rz-V1F" id="pTL-KX-GrJ"/>
+                                            <outlet property="nonprofitProfileImageView" destination="9BZ-Qs-zwb" id="EYk-eC-RGC"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Select nonprofits" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Rx-43-190">
-                                <rect key="frame" x="82" y="273" width="131" height="21"/>
+                                <rect key="frame" x="35" y="126" width="131" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="71n-vH-RZY">
-                                <rect key="frame" x="0.0" y="337" width="414" height="248"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="NonprofitListCell" rowHeight="96" id="oMw-yN-wZq" customClass="NonprofitListCell">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="96"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="oMw-yN-wZq" id="6v7-PU-mfm">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="96"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
